--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "parcel-project-template",
+  "name": "rest-api",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://goitacademy.github.io/parcel-project-template",
+  "homepage": "https://github.com/xkyota/rest-api",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /parcel-project-template/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "git+https://github.com/xkyota/rest-api"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Maksym Durikhin <mdurihin@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/xkyota/rest-api/issues"
   },
   "dependencies": {
     "modern-normalize": "^1.1.0"
